gateway.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: product
spec:
  hosts:
  - "*"
  gateways: 
    - istio-gateway
  http:
  - match:
    - uri:
        prefix: "/config-service"
    rewrite: 
      uri: "/"
    route:
      - destination:
          host: esb-config-service.default.svc.cluster.local
          port:
            number: 18601
  - match:
    - uri:
        prefix: "/auth-service"
    rewrite: 
      uri: "/"
    route:
      - destination:
          host: esb-auth-service.default.svc.cluster.local
          port:
            number: 18201
  - match:
    - uri:
        prefix: "/productpage"
    # rewrite: 
    #   uri: "/"
    route:
      - destination:
          host: productpage.default.svc.cluster.local
          port:
            number: 9080
  - route:
    - destination:
        host: 	productpage.default.svc.cluster.local
        port:
          number: 9080

---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
